tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vcvtss2si_r32_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:182:24: error: use of undefined value '@my.fabs.f32'
  %9 = tail call float @my.fabs.f32(float %8) #22
                       ^
0.01user 0.03system 0:00.04elapsed 106%CPU (0avgtext+0avgdata 27392maxresident)k
0inputs+16outputs (0major+3249minor)pagefaults 0swaps
